--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 <body>
     <div class="container">
     <header id="logo">
-        <h1>Febrianto Widya Bagus Fitranto</h1>
-        <span id="jobdesc">soon</span>
+        <div class="box">
+        <img src="img/edit.jpg" alt="profile">
+        </div>
+        <div class="box">
+        <h3><q>I am a fresh graduate with a degree in telecommunication engineering with experience in wireless communication research especially for MIMO system, currently looking for full-time telecommunication engineer position.  I would like to work with other professionals to improve my skills while expanding my passion which will allow me to further contribute in the field of the telecommunication system. I am capable of working under pressure and working as a team or individually in achieving task goals and objectives. </q></h3>
     </header>
     <section>
         <span>How I Work</span>
