--- a/index.html
+++ b/index.html
@@ -9,42 +9,252 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-    <header id="logo">
-        <div class="box">
-        <img src="img/edit.jpg" alt="profile">
-        </div>
-        <div class="box">
-        <h3><q>I am a fresh graduate with a degree in telecommunication engineering with experience in wireless communication research especially for MIMO system, currently looking for full-time telecommunication engineer position.  I would like to work with other professionals to improve my skills while expanding my passion which will allow me to further contribute in the field of the telecommunication system. I am capable of working under pressure and working as a team or individually in achieving task goals and objectives. </q></h3>
-    </header>
-    <section>
-        <span>How I Work</span>
-        <div class="section">
-            <div class="content">
-                <div class="box">
-                    <img src="img/box1.jpg" alt="">
-                    <h3>Step 1: Sketch.</h3>
-                    <p>Pencils Graphite (H) on 17x14" Strathmore Windpower Bristol</p>
+<div class="navbar">
+    <a href="#main"><h2><strong>HOME</strong></h2></a>
+    <a href="#summary"><h2><strong>SUMMARY</strong></h2></a>
+    <a href="#riset"><h2><strong>RESEARCH</strong></h2></a>
+    <a href="#work"><h2><strong>WORKING</strong></h2></a>
+    <a href="#skill"><h2><strong>SKILLS</strong></h2></a>
+    <a href="#edu"><h2><strong>EDUCATION</strong></h2></a>
+    <a href="#contact"><h2><strong>CONTACT</strong></h2></a>
+</div>
+    <div class="main-section" id="main">
+            <div class="section-content wow fadeInUp">
+                <br/><br/><br/>
+                <h1>JUNIOR TELCO-ENGINEER</h1>
+                <div class="small"><em>I am a fresh graduate with a degree in telecommunication engineering</em></div>
+            </div>
+        </div> <!-- ./profile -->
+        <div class="section white-bg" id="summary">
+            <div class="section-content wow fadeInUp">
+                <div class="title">
+                    <h1>Summary</h1>
+                    <img src="img/summary.png" width="40px" alt="profile icon">
                 </div>
-                <div class="box">
-                    <img src="img/box2.jpg" alt="">
-                    <h3>Step 2: Inking.</h3>
-                    <p>Inks Windsor Newton Series 7s (0-2), Copic Technical Pens, White Out. Scanned at 1200DPI (Bitmap)</p>
-                </div>
-                <div class="box">
-                    <img src="img/box3.jpg" alt="">
-                    <h3>Step 3: Coloring.</h3>
-                    <p>Finish Treatment: Photoshop Gradiant layers, hue/adjustment layers. Diffusion achieved using solid fill layer based on colour channel, blurred and reducied to 20% Opacity.</p>
+
+                <div class="content">
+                    <div>
+                        <h2>FEBRIANTO WIDYA BAGUS FITRANTO</h2>
+                        <p>
+                           I am a fresh graduate with a degree in telecommunication engineering with experience in wireless communication research especially for <b>MIMO</b> system.
+                           <br/>Currently looking for full-time telecommunication engineer position.<br/><br/>
+                            I would like to work with other professionals to improve my skills while expanding my passion which will allow me to further contribute in the field of the telecommunication system.
+                        <br/><br/>
+                            I am capable of working under pressure and working as a team or individually in achieving task goals and objectives.
+                        </p>
+
+                    </div>
                 </div>
             </div>
+        </div><!-- ./about -->
+         <div class="section blue-bg" id="riset">
+            <div class="section-content wow fadeInUp">
+                <div class="title">
+                    <h1>RESEARCH ACTIVITIES</h1>
+                    <img src="img/research.png" width="40px" alt="experience icon">
+                </div>
+
+                <div class="content">
+                    <div>
+                        <div class="box">
+                            <h2>Smart Communication Research</h2>
+                            <div class="small">May 2016 - Present</div>
+                            <p>Conducted final task research on 2x2 MIMO wireless communication using USRP N210</p>
+                        </div>
+                        <div class="box">
+                            <h2>Laboratory Exchange Program</h2>
+                            <div class="small">December 2016</div>
+                            <p>Exchange program to share knowledge about research activities between each campus</p>
+                        </div>
+                        <div class="box">
+                            <h2>Collaborative Research for Alumni</h2>
+                            <div class="small">February 2016</div>
+                            <p>As student representative to share knowledge about recent wireless communication research using USRP hardware at Kyoto University.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div><!-- ./experience -->
+        <div class="section white-bg" id="work">
+            <div class="section-content wow fadeInUp">
+                <div class="title">
+                    <h1>WORKING EXPERIENCE</h1>
+                    <img src="img/work.png" width="40px" alt="experience icon">
+                </div>
+
+                <div class="content">
+                    <div>
+                        <h2>Junior Staff Administration (part time) / Malsa Transportindo</h2>
+                        <div class="small">March 2016 - Present</div>
+                        <em>Key Contributions:</em>
+                        <ul>
+                        <li>Worked under owner to maintain rider’s daily operational
+                        </li>
+                        <li>
+                        Provided list and detailed information of daily schedules for riders deployment
+                        </li>
+                        <li>
+                        Calculated daily report and informed it to owner
+                        </li>
+                        </ul>
+                        <br/><br/>
+                        <h2>RND Staff-Student Internship / PT.Pasifik Satelit Nusantara</h2>
+                        <div class="small">January 2016 - February 2016</div>
+                        <em>Key Contributions:</em>
+                        <ul>
+                        <li>Worked under head of RND to design a prototype of transmitter AIS using GNU Radio and HackRF
+                        </li>
+                        <li>
+                        Conducted experiment using a designed prototype and AIS hardware
+                        </li>
+                        <li>
+                        Worked as a team to delivered the experimental results
+                        </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div><!-- ./experience -->
+        <div class="section blue-bg" id="life">
+            <div class="section-content wow fadeInUp">
+                <div class="title">
+                    <h1>CAMPUS LIFE</h1>
+                    <img src="img/life.png" width="40px" alt="experience icon">
+                </div>
+
+                <div class="content">
+                    <div style="width: 45%; float:left">
+                        <div class="box">
+                            <h2>Member / Smart System Research Group</h2>
+                            <div class="small">May 2016 - Present</div>
+                        </div>
+                        <div class="box">
+                            <h2>Logistic Coordinator / Technocorner 2014</h2>
+                            <div class="small">2014</div>
+                        </div>
+                        <div class="box">
+                            <h2>Transport Div. / LUSTRUM 50 Tahun JTETI UGM</h2>
+                            <div class="small">2013</div>
+                        </div>
+                    </div>
+                    <div style="width: 45%; float:right">
+                        <div class="box">
+                            <h2>Transport Coordinator / GEMASTIK 7</h2>
+                            <div class="small">2014</div>
+                        </div>
+                        <div class="box">
+                            <h2>Funding Division / Female Sport</h2>
+                            <div class="small">2014</div>
+                        </div>
+                        <div class="box">
+                            <h2>Member / Cendekia Teknika FT UGM</h2>
+                            <div class="small">2012-2013</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div><!-- ./experience -->
+        <div class="section white-bg" id="skill">
+            <div class="section-content wow fadeInUp">
+                <div class="title">
+                    <h1>Skillset</h1>
+                    <img src="img/skill.png" width="40px" alt="skill icon">
+                </div>
+
+                <div class="content">
+                    <div>
+                        <div class="dual-col">
+                            <h2>GNU RADIO</h2>
+                            <div class="w3-progress-container">
+                                <div class="w3-progressbar" style="width:80%"></div>
+                            </div>
+                        </div>
+
+                        <div class="dual-col">
+                            <h2>HTML</h2>
+                            <div class="w3-progress-container">
+                                <div class="w3-progressbar" style="width:80%"></div>
+                            </div>
+                        </div>
+
+                        <div class="dual-col">
+                            <h2>PYTHON</h2>
+                            <div class="w3-progress-container">
+                                <div class="w3-progressbar" style="width:60%"></div>
+                            </div>
+                        </div>
+
+                        <div class="dual-col">
+                            <h2>CSS</h2>
+                            <div class="w3-progress-container">
+                                <div class="w3-progressbar" style="width:40%"></div>
+                            </div>
+                        </div>
+
+
+                        <div class="dual-col">
+                            <h2>MS. WORD</h2>
+                            <div class="w3-progress-container">
+                                <div class="w3-progressbar" style="width:90%"></div>
+                            </div>
+                        </div>
+
+                        <div class="dual-col">
+                            <h2>MS. EXCEL</h2>
+                            <div class="w3-progress-container">
+                                <div class="w3-progressbar" style="width:90%"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div><!-- ./skillset -->
+         <div class="section blue-bg" id="edu">
+            <div class="section-content wow fadeInUp">
+                <div class="title">
+                    <h1>Education</h1>
+                    <img src="img/edu.png" width="40px" alt="motarboard icon">
+                </div>
+
+                <div class="content">
+                    <div>
+                        <div class="small">2012-2017</div>
+                        <h2>BEng. in Electrical Engineering</h2>
+                        <p>Department of Electrical Engineering and Information Technology,<br/>
+                        Faculty of Engineering, Universitas Gadjah Mada<br/>
+                        Bachelor Program of Electrical Engineering<br/>
+                        Telecommunication Subconcentration<br/>
+                        GPA 3.20 / 4.0
+                        </p>
+                        <br/><br/>
+                    </div>
+                </div>
+            </div>
+        </div><!-- ./education -->
+        <div class="section white-bg" id="contact">
+            <div class="section-content wow fadeInUp">
+                <div class="title">
+                    <h1>CONTACT ME</h1>
+                    <div class="small">Yogyakarta</div>
+                    <img src="img/edit.jpg" width="150px" alt="photo">
+                </div>
+
+                <div class="content">
+                    <div>
+                        <div class="small">Email:</div>
+                        <p><strong>febrianto.w.bagus@gmail.com</strong></p><br/>
+                        <a href="https://www.facebook.com/lastar13"><img src="img/fb.png" width="35px"></a>
+                        <a href="https://www.linkedin.com/in/fwbagusf"><img src="img/linkdn.png" width="35px"></a>
+                        <a href="https://www.instagram.com/fwbagusf"><img src="img/gram.png" width="35px"></a>
+                    </div>
+                </div>
+            </div>
+        </div><!-- ./contact -->
+
+    <div class="footer section">
+            <div class="section-content">
+                <p>&copy; 2017 <a href="https://fwbagusf.github.io">fw<strong>bagus</strong>f </a>| Inspired by <a href="http://jessdesigntan.com/">JESS<strong>DESIGN</strong>TAN</a></p>
+            </div>
         </div>
-    </section>
-    <footer>
-        <div class="content">
-            <div class="box">&copy; Febrianto Bagus | All Right Reserved</div>
-            <div class="box"><strong>Find me on: </strong><a href="http://www.twitter.com/fwbagusf">Twitter</a> / <a href="http://www.facebook.com/lastar13">Facebook</a> / <a href="http://www.instagram.com/fwbagusf">Instagram</a><br><strong>Email:</strong> febrianto.w.bagus@gmail.com</div>
-        </div>
-    </footer>
-    </div>
 </body>
 </html>
