--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="navbar">
+    <nav>
+        <a href="#" id="menu-icon"></a>
+        <ul clash="navi">
+            <li><a href="#" class="current">Home</a></li>
+            <li><a href="#summary">Summary</a></li>
+            <li><a href="#riset">Research</a></li>
+            <li><a href="#work">Working</a></li>
+            <li><a href="#skill">Skills</a></li>
+            <li><a href="#edu">Education</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+
+
     <a href="#main"><h2><strong>HOME</strong></h2></a>
     <a href="#summary"><h2><strong>SUMMARY</strong></h2></a>
     <a href="#riset"><h2><strong>RESEARCH</strong></h2></a>
@@ -16,7 +28,8 @@
     <a href="#skill"><h2><strong>SKILLS</strong></h2></a>
     <a href="#edu"><h2><strong>EDUCATION</strong></h2></a>
     <a href="#contact"><h2><strong>CONTACT</strong></h2></a>
-</div>
+
+    </nav>
     <div class="main-section" id="main">
             <div class="section-content wow fadeInUp">
                 <br/><br/><br/>
