--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <a href="#" id="menu-icon"></a>
-        <ul clash="navi">
+        <ul class="navi">
             <li><a href="#" class="current">Home</a></li>
             <li><a href="#summary">Summary</a></li>
             <li><a href="#riset">Research</a></li>
