--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
     <nav>
         <a href="#" id="menu-icon"></a>
         <ul class="navi">
@@ -20,6 +21,7 @@
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
+    </header>
     <div class="main-section" id="main">
             <div class="section-content wow fadeInUp">
                 <br/><br/><br/>
