--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
                         <h2>Junior Staff Administration (part time) / Malsa Transportindo</h2>
                         <div class="small">March 2016 - Present</div>
                         <em>Key Contributions:</em>
-                        <ul>
-                        <li>Worked under owner to maintain rider’s daily operational
+                        <ul class="job">
+                        <li class="lis">Worked under owner to maintain rider’s daily operational
                         </li>
-                        <li>
+                        <li class="lis">
                         Provided list and detailed information of daily schedules for riders deployment
                         </li>
-                        <li>
+                        <li class="lis">
                         Calculated daily report and informed it to owner
                         </li>
                         </ul>
@@ -105,13 +105,13 @@
                         <h2>RND Staff-Student Internship / PT.Pasifik Satelit Nusantara</h2>
                         <div class="small">January 2016 - February 2016</div>
                         <em>Key Contributions:</em>
-                        <ul>
-                        <li>Worked under head of RND to design a prototype of transmitter AIS using GNU Radio and HackRF
+                        <ul class="job">
+                        <li class="lis">Worked under head of RND to design a prototype of transmitter AIS using GNU Radio and HackRF
                         </li>
-                        <li>
+                        <li class="lis">
                         Conducted experiment using a designed prototype and AIS hardware
                         </li>
-                        <li>
+                        <li class="lis">
                         Worked as a team to delivered the experimental results
                         </li>
                         </ul>
