--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                         <p>Department of Electrical Engineering and Information Technology,<br/>
                         Faculty of Engineering, Universitas Gadjah Mada<br/>
                         Bachelor Program of Electrical Engineering<br/>
-                        Telecommunication Subconcentration<br/>
+                            <strong>Telecommunication</strong> Subconcentration<br/>
                         </p>
                         <br/><br/>
                     </div>
